--- a/src/main/java/Despacho/Presentation/Pacientes/PacientesAdmin.form
+++ b/src/main/java/Despacho/Presentation/Pacientes/PacientesAdmin.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Despacho.Presentation.Pacientes.Pacientes">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Despacho.Presentation.Pacientes.PacientesAdmin">
   <grid id="27dc6" binding="IngresarPaciente" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
