--- a/src/main/java/Despacho/Presentation/Pacientes/PacientesAdmin.form
+++ b/src/main/java/Despacho/Presentation/Pacientes/PacientesAdmin.form
@@ -154,9 +154,11 @@
         <properties/>
         <border type="bevel-lowered" title="Listado"/>
         <children>
-          <component id="b92b5" class="javax.swing.JComboBox" binding="comboBoxPac">
+          <component id="f0b2c" class="javax.swing.JTable" binding="tablePacientes">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="50"/>
+              </grid>
             </constraints>
             <properties/>
           </component>
