--- a/src/main/java/Despacho/Presentation/Medicamentos/MedicaAdmin.form
+++ b/src/main/java/Despacho/Presentation/Medicamentos/MedicaAdmin.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Despacho.Presentation.Medicamentos.MedicaAdmin">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="menumedicamentos" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="676" height="400"/>
@@ -32,7 +32,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="c3a24" class="javax.swing.JTextField">
+              <component id="c3a24" class="javax.swing.JTextField" binding="codigoTextField">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -48,7 +48,7 @@
                   <text value="Nombre:"/>
                 </properties>
               </component>
-              <component id="8f00d" class="javax.swing.JTextField">
+              <component id="8f00d" class="javax.swing.JTextField" binding="nombreTextField">
                 <constraints>
                   <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -58,7 +58,7 @@
               </component>
             </children>
           </grid>
-          <component id="a196" class="javax.swing.JButton">
+          <component id="a196" class="javax.swing.JButton" binding="guardarButton">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -66,7 +66,7 @@
               <text value="Guardar"/>
             </properties>
           </component>
-          <component id="d8e9d" class="javax.swing.JButton">
+          <component id="d8e9d" class="javax.swing.JButton" binding="limpiarButton">
             <constraints>
               <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -82,7 +82,7 @@
               <text value="Presentación:"/>
             </properties>
           </component>
-          <component id="7fec" class="javax.swing.JTextField">
+          <component id="7fec" class="javax.swing.JTextField" binding="presentacionTextField">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -90,7 +90,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="67557" class="javax.swing.JButton">
+          <component id="67557" class="javax.swing.JButton" binding="borrarButton">
             <constraints>
               <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -124,7 +124,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="82146" class="javax.swing.JTextField">
+              <component id="82146" class="javax.swing.JTextField" binding="codigoBuscar">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -137,7 +137,7 @@
                   <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
               </hspacer>
-              <component id="76491" class="javax.swing.JButton">
+              <component id="76491" class="javax.swing.JButton" binding="buscarButton">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -145,7 +145,7 @@
                   <text value="Buscar"/>
                 </properties>
               </component>
-              <component id="67167" class="javax.swing.JButton">
+              <component id="67167" class="javax.swing.JButton" binding="reporteButton">
                 <constraints>
                   <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -165,9 +165,11 @@
         <properties/>
         <border type="bevel-lowered" title="Listado"/>
         <children>
-          <component id="90bfb" class="javax.swing.JComboBox">
+          <component id="53359" class="javax.swing.JTable" binding="tableMedicamentos">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="50"/>
+              </grid>
             </constraints>
             <properties/>
           </component>
