--- a/src/main/java/Despacho/Presentation/Pacientes/PacientesAdmin.form
+++ b/src/main/java/Despacho/Presentation/Pacientes/PacientesAdmin.form
@@ -95,7 +95,7 @@
               <text value="Fecha de nacimiento:"/>
             </properties>
           </component>
-          <component id="d7be7" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+          <component id="d7be7" class="javax.swing.JTextField" binding="textFieldFN">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -111,7 +111,7 @@
               <text value="Número telefónico:"/>
             </properties>
           </component>
-          <component id="e0cba" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+          <component id="e0cba" class="javax.swing.JTextField" binding="textFieldNum">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
