--- a/src/main/java/Despacho/Presentation/Farmaceutico/FarmaAdmin.form
+++ b/src/main/java/Despacho/Presentation/Farmaceutico/FarmaAdmin.form
@@ -44,6 +44,8 @@
                   </grid>
                 </constraints>
                 <properties>
+                  <editable value="false"/>
+                  <enabled value="false"/>
                   <text value=""/>
                 </properties>
               </component>
