--- a/src/main/java/Despacho/Presentation/Medico/MediAdmin.form
+++ b/src/main/java/Despacho/Presentation/Medico/MediAdmin.form
@@ -38,7 +38,10 @@
                     <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <editable value="false"/>
+                  <enabled value="false"/>
+                </properties>
               </component>
               <component id="418e3" class="javax.swing.JLabel">
                 <constraints>
