--- a/src/main/java/Despacho/Presentation/Medicamentos/MedicaAdmin.form
+++ b/src/main/java/Despacho/Presentation/Medicamentos/MedicaAdmin.form
@@ -38,7 +38,10 @@
                     <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <editable value="false"/>
+                  <enabled value="false"/>
+                </properties>
               </component>
               <component id="df70a" class="javax.swing.JLabel">
                 <constraints>
@@ -157,7 +160,7 @@
           </grid>
         </children>
       </grid>
-      <grid id="645a3" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="645a3" binding="panellistado" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
