--- a/src/main/java/Despacho/Presentation/Prescribir/DialogsPrescribir/AgregarMedicamento.form
+++ b/src/main/java/Despacho/Presentation/Prescribir/DialogsPrescribir/AgregarMedicamento.form
@@ -91,10 +91,13 @@
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <model/>
+                      <model>
+                        <item value="Nombre"/>
+                        <item value="Código"/>
+                      </model>
                     </properties>
                   </component>
-                  <component id="ca1b8" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+                  <component id="ca1b8" class="javax.swing.JTextField" binding="textFieldBuscar">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
@@ -104,7 +107,7 @@
                   </component>
                 </children>
               </grid>
-              <grid id="b5c19" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="b5c19" binding="panellistado" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
