--- a/src/main/java/Despacho/Presentation/Historico/Historico.form
+++ b/src/main/java/Despacho/Presentation/Historico/Historico.form
@@ -91,13 +91,13 @@
           </grid>
         </children>
       </grid>
-      <grid id="7f7d1" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="7f7d1" binding="panelrecetas" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-        <border type="none"/>
+        <border type="none" title="Recetas Totales"/>
         <children>
           <component id="72a10" class="javax.swing.JTable" binding="table1" default-binding="true">
             <constraints>
