--- a/src/main/java/Despacho/Presentation/DashBoard/ViewDB.form
+++ b/src/main/java/Despacho/Presentation/DashBoard/ViewDB.form
@@ -75,7 +75,9 @@
                 <constraints>
                   <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
-                <properties/>
+                <properties>
+                  <model/>
+                </properties>
               </component>
               <component id="b74a2" class="javax.swing.JComboBox" binding="HastaMes">
                 <constraints>
